<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/call_screening_rules_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/call_screening_rules_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/call_screening_rules_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:title="@string/call_screening_rules"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </org.fossify.commons.views.MyAppBarLayout>

    <LinearLayout
        android:id="@+id/call_screening_rules_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/call_screening_rules_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/normal_margin"
            android:text="@string/call_screening_rules_hint"
            android:textSize="@dimen/normal_text_size" />

        <org.fossify.commons.views.MyRecyclerView
            android:id="@+id/call_screening_rules_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:scrollbars="none"
            app:layoutManager="org.fossify.commons.views.MyLinearLayoutManager" />

    </LinearLayout>

    <org.fossify.commons.views.MyFloatingActionButton
        android:id="@+id/call_screening_rules_add"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/activity_margin"
        android:contentDescription="@string/call_screening_add_rule"
        android:src="@drawable/ic_plus_vector" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
