<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/call_screening_rule_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/call_screening_rule_dialog_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin">

        <RadioGroup
            android:id="@+id/call_screening_rule_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

            <org.fossify.commons.views.MyCompatRadioButton
                android:id="@+id/call_screening_rule_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/call_screening_block" />

            <org.fossify.commons.views.MyCompatRadioButton
                android:id="@+id/call_screening_rule_allow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/call_screening_allow" />

        </RadioGroup>

        <org.fossify.commons.views.MyTextInputLayout
            android:id="@+id/call_screening_rule_pattern_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:hint="@string/call_screening_pattern">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/call_screening_rule_pattern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size" />

        </org.fossify.commons.views.MyTextInputLayout>

        <org.fossify.commons.views.MyTextInputLayout
            android:id="@+id/call_screening_rule_test_number_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:hint="@string/call_screening_test_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/call_screening_rule_test_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size" />

        </org.fossify.commons.views.MyTextInputLayout>

        <org.fossify.commons.views.MyTextView
            android:id="@+id/call_screening_rule_test_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:textSize="@dimen/normal_text_size"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
