<?xml version="1.0" encoding="utf-8"?>
<org.fossify.phone.fragments.IntercomFragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intercom_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/intercom_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/intercom_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            android:gravity="center"
            android:textSize="@dimen/bigger_text_size"
            tools:text="Auto-open is off" />

        <LinearLayout
            android:id="@+id/intercom_openings_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <org.fossify.commons.views.MyTextView
                android:id="@+id/intercom_openings_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intercom_openings"
                android:textSize="@dimen/bigger_text_size" />

            <org.fossify.commons.views.MyEditText
                android:id="@+id/intercom_openings"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size"
                tools:text="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/intercom_hours_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <org.fossify.commons.views.MyTextView
                android:id="@+id/intercom_hours_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intercom_hours"
                android:textSize="@dimen/bigger_text_size" />

            <org.fossify.commons.views.MyEditText
                android:id="@+id/intercom_hours"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/bigger_text_size"
                tools:text="6" />

        </LinearLayout>

        <org.fossify.commons.views.MyButton
            android:id="@+id/intercom_toggle"
            style="@style/ColoredButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            tools:text="@string/intercom_arm" />

    </LinearLayout>
</org.fossify.phone.fragments.IntercomFragment>
